src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__library_ui_tests__tests__snapshot_tests__library_ui_renders_dropdown_over_edit_artist_over_artist_details.snap
---
source: src/ui/lidarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Name ▼                       Type          Status        Quality Profile      Metadata Profile    Albums     Tracks      Size        Monitored  Tags              
=> Alex                         Person        Continuing    Lossless             Standard            1          12/15       0.01 MB     🏷          alex              
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭───────────────────────────────────  Edit - Alex (American pianist)  ────────────────────────────────────╮                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                  ╭───╮                                                  │                              
                            │                                       Monitored: │ ✔ │                                                  │                              
                            │                                                  ╰───╯                                                  │                              
                            │                                     ╭───────────────────────────────╮──────────────────────────────╮    │                              
                            │                              Monitor│Standard                       │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                 Qual│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                Metad│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                     │                               │                              │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                     │                               │                              │    │                              
                            │                                     ╰───────────────────────────────╯──────────────────────────────╯    │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                              
                            ││                       Save                        ││                      Cancel                      ││                              
                            │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                              
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
