src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__library_ui_tests__tests__snapshot_tests__lidarr_library_ArtistsSortPrompt.snap
---
source: src/ui/lidarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Name                         Type          Status        Quality Profile      Metadata Profile    Albums     Tracks      Size        Monitored  Tags              
=> Alex                         Person        Continuing    Lossless             Standard            1          12/15       0.00 GB     🏷          alex              
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                  ╭───────────────────────────────╮                                                                  
                                                                  │Name                           │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  ╰───────────────────────────────╯
